[gd_scene load_steps=28 format=3 uid="uid://cjy413qmg6dp2"]

[ext_resource type="Script" path="res://gameObjects/enemies/dummy/dummy.gd" id="1_5xtxg"]
[ext_resource type="Texture2D" uid="uid://cvs6ebwk7nrqh" path="res://art/Players/players grey x1.png" id="1_gqki6"]
[ext_resource type="Shader" path="res://gameObjects/enemies/enemy.gdshader" id="2_joq5x"]
[ext_resource type="AudioStream" uid="uid://t62ylhlc44lx" path="res://sfx/Space_Ambience_and_Sound_Pack/Laser_And_Laser_Gun/Laser_1.wav" id="4_oyke3"]
[ext_resource type="AudioStream" uid="uid://cb1c4jf44tn77" path="res://sfx/SCI-FI_UI_SFX_PACK/Rings/Ring_Pitched_Up_1.wav" id="5_7vye3"]
[ext_resource type="AudioStream" uid="uid://eh63ej0ofcr3" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_3.wav" id="6_egvcx"]
[ext_resource type="AudioStream" uid="uid://bw5de6mvi8y80" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_4.wav" id="7_bmsp0"]
[ext_resource type="AudioStream" uid="uid://cyshefdvwrhjt" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_22.wav" id="8_hxfcp"]
[ext_resource type="AudioStream" uid="uid://feq6wsaru7w1" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_20.wav" id="9_lqhhf"]
[ext_resource type="AudioStream" uid="uid://bl518wjv3bn5k" path="res://sfx/SCI-FI_UI_SFX_PACK/Glitches/Glitch_14.wav" id="10_tpmey"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aj8es"]
shader = ExtResource("2_joq5x")
shader_parameter/flash_white = false

[sub_resource type="AtlasTexture" id="AtlasTexture_n0gj7"]
atlas = ExtResource("1_gqki6")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsdug"]
atlas = ExtResource("1_gqki6")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxdds"]
atlas = ExtResource("1_gqki6")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs3bq"]
atlas = ExtResource("1_gqki6")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8b6p"]
atlas = ExtResource("1_gqki6")
region = Rect2(160, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll1qj"]
atlas = ExtResource("1_gqki6")
region = Rect2(192, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qfcd"]
atlas = ExtResource("1_gqki6")
region = Rect2(256, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pldfb"]
atlas = ExtResource("1_gqki6")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqrjj"]
atlas = ExtResource("1_gqki6")
region = Rect2(0, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh4e2"]
atlas = ExtResource("1_gqki6")
region = Rect2(32, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp386"]
atlas = ExtResource("1_gqki6")
region = Rect2(64, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybpox"]
atlas = ExtResource("1_gqki6")
region = Rect2(96, 352, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0nmmo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0gj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsdug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxdds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs3bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8b6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll1qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qfcd")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pldfb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqrjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh4e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp386")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybpox")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_auly2"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_a12ko"]
streams_count = 1
random_pitch = 1.2
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("4_oyke3")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_42ynm"]
streams_count = 5
stream_0/stream = ExtResource("6_egvcx")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_bmsp0")
stream_1/weight = 1.0
stream_2/stream = ExtResource("8_hxfcp")
stream_2/weight = 1.0
stream_3/stream = ExtResource("9_lqhhf")
stream_3/weight = 1.0
stream_4/stream = ExtResource("10_tpmey")
stream_4/weight = 1.0

[node name="dummy" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 32
script = ExtResource("1_5xtxg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_aj8es")
position = Vector2(10, -8.5)
sprite_frames = SubResource("SpriteFrames_0nmmo")
animation = &"shoot"
autoplay = "default"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11.5, -2)
shape = SubResource("CircleShape2D_auly2")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="playerRayCast" type="RayCast2D" parent="."]

[node name="SFX" type="Node" parent="."]

[node name="shootSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_a12ko")
volume_db = -30.0
max_distance = 1000.0
attenuation = -1.0
bus = &"SFX"

[node name="hitSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5_7vye3")
max_distance = 1000.0
attenuation = -1.0

[node name="deathSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_42ynm")
volume_db = -10.0
attenuation = -1.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
